--- a/_config.yml
+++ b/_config.yml
@@ -7,12 +7,12 @@
 
 # Site settings
 title: Gravity
-email: hemangsk@gmail.com
+email: benkompa@gmail.com
 description: The Liberal Jekyll Theme
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: hemang_kumar
-github_username:  hemangsk
+url: "http://bkompa.github.io" # the base hostname & protocol for your site
+twitter_username: bkompa
+github_username:  bkompa
 paginate: 5
 
 gems: [jekyll-paginate, kramdown]
