--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Gravity
+title: Ben Kompa
 email: benkompa@gmail.com
-description: The Liberal Jekyll Theme
+description: Machine Learning + CS + Bio 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://bkompa.github.io" # the base hostname & protocol for your site
 twitter_username: bkompa
