--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site settings
 title: Ben Kompa
 email: benkompa@gmail.com
-description: Machine Learning + CS + Bio 
+description: Machine Learning + Healthcare
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://bkompa.github.io" # the base hostname & protocol for your site
 twitter_username: BenKompa
